--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ permalink: pretty
 # ----------------------- #
 
 social:
-#  - title: twitter
-#    url: https://twitter.com/SBootstrap
+  - title: Web
+    url: http://www.forces.gc.ca/en/operations-special-forces/about.page
   - title: github
     url: https://github.com/CANSOFCOM-Innovation
 #  - title: linkedin
