--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: Web
+  - title: search
+	text: Web
     url: http://www.forces.gc.ca/en/operations-special-forces/about.page
   - title: github
     url: https://github.com/CANSOFCOM-Innovation
