--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ social:
 	text: Web
     url: http://www.forces.gc.ca/en/operations-special-forces/about.page
   - title: github
+	text: GitHub
     url: https://github.com/CANSOFCOM-Innovation
 #  - title: linkedin
 #    url: 
